fix(Styles): :lipstick: Prevent X-overflow from absolute positioned elements.
Absolute positioning removes elements from the document flow, allowing them to overflow.

--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,7 @@ html {
 	color: var(--text, black);
 	scrollbar-width: thin;
 	scrollbar-color: var(--accent, hsl(37, 75%, 65%)) var(--background, hsl(120, 16%, 17%));
+	overflow-x: hidden;
 
 	--h1-size:  clamp(2rem,5vw,3rem);
 	/* --h2-size: clamp(0.5rem,4vw,1rem); */
